# python-project-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  .rsync-filter  Makefile  ansible.cfg  deploy.yml  manage.py  pyproject.toml  settings.py  supervisor.conf
{{ cookiecutter.project_slug }}/.github/workflows/: claude.yaml  deploy.yml
